@@ -4,6 +4,9 @@ Changelog
 1.0b3 - Unreleased
 ------------------
 
+* Add adapter for previous/next support that doesn't need the catalog.
+  [witsch]
+
 * Remove `getObjPositionInParent` catalog index and use a sort index based
   on the folder's order information instead.
   [witsch]
